--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "dependencies": {
     "express": "latest",
     "connect": "latest",
-    "mongoose": "~3.5.5"
+    "mongoose": "~3.5.5",
+    "underscore": "*",
+    "ejs": "~0.7.1",
+    "ejs-locals": "latest"
     },
   "devDependencies": {
     "gulp-jshint": "~1.4.0",
