--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "ejs": "~0.7.1",
     "ejs-locals": "latest",
     "body-parser" : "latest",
-    "moment": "latest"
+    "moment": "latest",
+    "mongoose-crate-s3": "latest",
+    "mongoose-crate" : "latest",
+    "mongoose-crate-imagemagick" : "latest",
+    "multer": "latest",
+    "gravatar" : "latest"
     },
   "devDependencies": {
     "gulp-jshint": "~1.4.0",
